doc: readme for working skeleton